# You must change these to your own details.
[package]
name = "umap"
description = "UMAP implementation."
version = "0.1.0"
authors = ["Anibal Solon <anibalsolon@gmail.com>"]
categories = ["data science", "wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
nalgebra = "*"

wasm-bindgen = "0.2.45"
js-sys = "0.3.22"

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
